--- a/src/app/city/city-locations/city-locations.component.html
+++ b/src/app/city/city-locations/city-locations.component.html
@@ -3,6 +3,6 @@
   <div class="card-body">
     <h5 class="card-title">{{l.name}}</h5>
     <p class="card-text">{{l.description}}</p>
-    <a class="btn btn-success" (click)="printCity()">Add</a>
+    <!-- <a class="btn btn-success" (click)="printCity()">Add</a> -->
   </div>
 </div>
